Fix misalignment in Chrome

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ p {
 }
 
 #contact #social {
+  float: left;
   margin-left: 10px;
 }
 
